--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -6,9 +6,10 @@
     <a class="py-2 d-none d-md-inline-block" th:href="@{/news/read}" style="color: aliceblue">Read News</a>
     <a class="py-2 d-none d-md-inline-block" th:href="@{/news/addAnonymousNews}" style="color: aliceblue">Create Anonymous News</a>
     <a class="py-2 d-none d-md-inline-block" th:href="@{/news}" style="color: aliceblue">Best News</a>
+    <a class="py-2 d-none d-md-inline-block" th:href="@{/news/category}" style="color: aliceblue"> Category</a>
     <a class="py-2 d-none d-md-inline-block" th:href="@{/redactor}" style="color: aliceblue"> Show profiles</a>
     <a class="py-2 d-none d-md-inline-block" th:href="@{/news/addNews}" style="color: aliceblue"> Create News  </a>
     <a class="py-2 d-none d-md-inline-block" th:href="@{/redactor/create}" style="color: aliceblue"> Create profile</a>
-    <a class="py-2 d-none d-md-inline-block" href="#"></a>
+
 </nav>
 </div>
