--- a/src/main/resources/templates/newsPages/addNews.html
+++ b/src/main/resources/templates/newsPages/addNews.html
@@ -23,7 +23,7 @@
   <div class="form-floating">
     <label for="mail">Email address</label>
     <br>
-    <input type="email"  th:field="*{redactor.mail}" class="form-control" id="mail">
+    <input type="text"  th:field="*{redactor.mail}" class="form-control" id="mail">
   </div>
   <div class="form-floating">
     <label for="cat">Category</label>
