--- a/src/main/resources/templates/newsPages/showNewsByMail.html
+++ b/src/main/resources/templates/newsPages/showNewsByMail.html
@@ -16,6 +16,7 @@
    ${news_.getRedactor().getName()}
 "></p>
     <br>
+    <p th:text="${news_.getFullText()}"></p>
 <!--    <a th:href="@{/news/id(id=${news_.getID()})}"><p th:text="${news_.getFullText()}"></p></a>-->
     <br>
 </div>
