--- a/src/main/resources/templates/mainPage/mainPage.html
+++ b/src/main/resources/templates/mainPage/mainPage.html
@@ -15,21 +15,21 @@
         <div class="row">
             <div class="col-lg-4">
                 <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false" ><title>Placeholder</title><rect width="100%" height="100%" fill="green"></rect><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
-                <h2>Policy</h2>
-                <p>First breaking news about Policy</p>
-                <p><a class="btn btn-secondary" th:href="@{/news/category/Policy}">View more »</a></p>
+                <h2>Travel</h2>
+                <p>First breaking news about travel</p>
+                <p><a class="btn btn-secondary" th:href="@{/news/category/travel}">View more »</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="red"></rect><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
-                <h2>Sport</h2>
-                <p>Another breaking news about Sport</p>
-                <p><a class="btn btn-secondary" th:href="@{/news/category/Sport}">View more »</a></p>
+                <h2>Weather</h2>
+                <p>Another breaking news about weather</p>
+                <p><a class="btn btn-secondary" th:href="@{/news/category/wheather}">View more »</a></p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="blue"></rect><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
-                <h2>Future</h2>
-                <p>And lastly breaking news about Future</p>
-                <p><a class="btn btn-secondary" th:href="@{/news/category/Future}">View more »</a></p>
+                <h2>Economy</h2>
+                <p>And lastly breaking news about economy</p>
+                <p><a class="btn btn-secondary" th:href="@{/news/category/economy}">View more »</a></p>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
         <hr class="featurette-divider">
@@ -51,7 +51,7 @@
             <div class="col-md-7">
                 <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Downloading news.</span></h2>
                 <p class="lead">And of course, you can download all the main news in the file and read then in offline mode.</p>
-                <a th:href="@{/downalod}"><p> <b> DOWNLOAD BREAKING NEWS </b></p></a>
+                <a th:href="@{/download}"><p> <b> DOWNLOAD BREAKING NEWS </b></p></a>
             </div>
         </div>
         <hr class="featurette-divider">
